--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
+# Backend
 cv-parser-backend/uploads
+cv-parser-backend/node_modules
+
+# Frontend
 cv-parser/.angular/cache/17.3.17/cv-parser/.tsbuildinfo
+cv-parser/node_modules
