--- a/cv-parser-backend/package.json
+++ b/cv-parser-backend/package.json
@@ -11,6 +11,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "multer": "^2.0.2",
+        "node-cron": "^4.2.1",
         "node-fetch": "^2.7.0",
         "zod": "^4.1.13"
     }
