Refactor AppComponent to modular component architecture and fix browser build dependencies

--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -39,5 +39,11 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.2.2"
+  },
+  "browser": {
+    "sharp": false,
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
